# End-To-End-Q-A-Chatbot-Using-Google-GemniI

./: .env  Readme.md  main.py  pyproject.toml
